--- a/.github/workflows/update-sublist.yml
+++ b/.github/workflows/update-sublist.yml
@@ -1,54 +1,85 @@
-import os
-import yaml
+name: به‌روزرسانی Sublist
 
-url_file = "Simple_URL_List.txt"
-template_file = "mihomo_template.txt"
-output_dir = "Sublist"
-cache_file = ".last_urls.txt"
+on:
+  schedule:
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
-if not os.path.exists(output_dir):
-    os.makedirs(output_dir)
+permissions:
+  contents: write
 
-# خواندن کش قبلی
-previous = {}
-if os.path.exists(cache_file):
-    with open(cache_file, "r") as f:
-        for line in f:
-            name, old_url = line.strip().split("|", 1)
-            previous[name] = old_url
+jobs:
+  update-sublist:
+    runs-on: ubuntu-latest
 
-new_cache = []
-changes_detected = False
+    steps:
+      - name: کلون کردن ریپو
+        uses: actions/checkout@v3
 
-with open(url_file, "r") as f:
-    lines = [line.strip() for line in f if "|" in line.strip()]
+      - name: نصب پایتون و PyYAML
+        run: |
+          sudo apt update
+          sudo apt install python3-pip -y
+          pip install pyyaml
 
-for line in lines:
-    filename, new_url = line.split("|", 1)
-    old_url = previous.get(filename)
-    new_cache.append(f"{filename}|{new_url}")
+      - name: اجرای اسکریپت Python
+        run: |
+          import os
+          import yaml
 
-    if new_url != old_url:
-        changes_detected = True
-        print(f"✏️ تغییر URL در: {filename}")
+          url_file = "Simple_URL_List.txt"
+          template_file = "mihomo_template.txt"
+          output_dir = "Sublist"
+          cache_file = ".last_urls.txt"
 
-        # فقط مقدار URL را تغییر بده
-        with open(template_file, "r", encoding="utf-8") as tf:
-            data = yaml.safe_load(tf)
+          if not os.path.exists(output_dir):
+              os.makedirs(output_dir)
 
-        # اگر ساختار به‌درستی بارگذاری نشد
-        if "proxy-providers" not in data or "proxy" not in data["proxy-providers"]:
-            raise Exception("ساختار فایل template نادرسته یا بخش proxy-provider موجود نیست.")
+          previous = {}
+          if os.path.exists(cache_file):
+              with open(cache_file, "r") as f:
+                  for line in f:
+                      name, old_url = line.strip().split("|", 1)
+                      previous[name] = old_url
 
-        data["proxy-providers"]["proxy"]["url"] = new_url
+          new_cache = []
+          changes_detected = False
 
-        # ذخیره خروجی
-        with open(os.path.join(output_dir, filename), "w", encoding="utf-8") as outf:
-            yaml.dump(data, outf, allow_unicode=True, default_flow_style=False)
+          with open(url_file, "r") as f:
+              lines = [line.strip() for line in f if "|" in line]
 
-# به‌روزرسانی کش
-with open(cache_file, "w") as f:
-    f.write("\n".join(new_cache))
+          for line in lines:
+              filename, new_url = line.split("|", 1)
+              old_url = previous.get(filename)
+              new_cache.append(f"{filename}|{new_url}")
 
-if not changes_detected:
-    print("✅ هیچ URL جدیدی شناسایی نشد.")
+              if new_url != old_url:
+                  changes_detected = True
+                  print(f"در حال ساخت فایل جدید برای: {filename}")
+
+                  with open(template_file, "r", encoding="utf-8") as tf:
+                      data = yaml.safe_load(tf)
+
+                  if "proxy-providers" not in data or "proxy" not in data["proxy-providers"]:
+                      raise Exception("ساختار proxy-providers یافت نشد!")
+
+                  data["proxy-providers"]["proxy"]["url"] = new_url
+
+                  with open(os.path.join(output_dir, filename), "w", encoding="utf-8") as outf:
+                      yaml.dump(data, outf, default_flow_style=False, allow_unicode=True)
+
+          with open(cache_file, "w") as f:
+              f.write("\n".join(new_cache))
+
+          if not changes_detected:
+              print("✅ تغییری در URLها وجود نداشت.")
+
+        shell: python3
+
+      - name: Commit و Push در صورت وجود تغییر
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Sublist/ .last_urls.txt || true
+          git diff --cached --quiet || git commit -m "🔁 به‌روزرسانی Sublist از Simple_URL_List.txt"
+          git push
