--- a/.github/workflows/update-sublist.yml
+++ b/.github/workflows/update-sublist.yml
@@ -15,8 +15,10 @@ jobs:
     steps:
       - name: کلون کردن ریپو
         uses: actions/checkout@v3
+        with:
+          persist-credentials: true  # اجازه‌ی پوش کردن را می‌دهد
 
-      - name: نصب پایتون و ruamel.yaml
+      - name: نصب پایتون و وابستگی‌ها
         run: |
           python3 -m pip install --upgrade pip
           pip install ruamel.yaml
@@ -28,6 +30,12 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add Sublist/ .last_urls.txt || true
-          git diff --cached --quiet || git commit -m "🔁 به‌روزرسانی Sublist از Simple_URL_List.txt"
-          git push
+          # اضافه کردن خروجی‌های Sublist و README و فایل‌های کش
+          git add Sublist/*.txt README.md .last_urls.txt .last_template_mtime || true
+          # اگر تغییر وجود داشت، کامیت و پوش کن
+          if ! git diff --cached --quiet; then
+            git commit -m "🔁 ci: به‌روزرسانی Sublist و README لینک‌ها"
+            git push
+          else
+            echo "No changes to commit"
+          fi
