--- a/.github/workflows/update-sublist.yml
+++ b/.github/workflows/update-sublist.yml
@@ -2,8 +2,8 @@ name: به‌روزرسانی Sublist
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # هر روز ساعت ۰۰:۰۰ UTC
-  workflow_dispatch:
+    - cron: '0 0 * * *'  # اجرای خودکار هر روز ساعت 00:00 UTC
+  workflow_dispatch:      # اجرای دستی از GitHub
 
 permissions:
   contents: write
@@ -15,13 +15,10 @@ jobs:
     steps:
       - name: کلون کردن ریپو
         uses: actions/checkout@v3
-        with:
-          persist-credentials: true  # اجازه‌ی پوش کردن را می‌دهد
 
-      - name: نصب پایتون و وابستگی‌ها
+      - name: نصب پایتون
         run: |
           python3 -m pip install --upgrade pip
-          pip install ruamel.yaml
 
       - name: اجرای اسکریپت Python
         run: python3 update_sublist.py
@@ -30,12 +27,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          # اضافه کردن خروجی‌های Sublist و README و فایل‌های کش
-          git add Sublist/*.txt README.md .last_urls.txt .last_template_mtime || true
-          # اگر تغییر وجود داشت، کامیت و پوش کن
-          if ! git diff --cached --quiet; then
-            git commit -m "🔁 ci: به‌روزرسانی Sublist و README لینک‌ها"
-            git push
-          else
-            echo "No changes to commit"
-          fi
+          git add Sublist/ .last_urls.txt .last_template_mtime README.md || true
+          git diff --cached --quiet || git commit -m "🔁 به‌روزرسانی فایل‌ها و README.md"
+          git push
