--- a/.github/workflows/update-sublist.yml
+++ b/.github/workflows/update-sublist.yml
@@ -27,6 +27,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add Sublist/ .last_urls.txt .last_template_mtime README.md || true
+          git add Sublist/ .cache_simple.txt .cache_complex.txt .last_template_mtime README.md
           git diff --cached --quiet || git commit -m "🔁 به‌روزرسانی فایل‌ها و README.md"
           git push
