--- a/.github/workflows/update-sublist.yml
+++ b/.github/workflows/update-sublist.yml
@@ -2,8 +2,8 @@ name: به‌روزرسانی Sublist
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # اجرای خودکار هر روز ساعت 00:00 UTC
-  workflow_dispatch:      # اجرای دستی از GitHub
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -25,8 +25,14 @@ jobs:
 
       - name: Commit و Push در صورت تغییر
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add Sublist/ .cache_simple.txt .cache_complex.txt .last_template_mtime README.md
-          git diff --cached --quiet || git commit -m "🔁 به‌روزرسانی فایل‌ها و README.md"
-          git push
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # افزودن فایل‌ها با مدیریت خطا
+          git add --ignore-errors Sublist/ .cache_simple.txt .cache_complex.txt .last_template_mtime README.md
+          
+          # Commit فقط در صورت وجود تغییرات
+          git diff --cached --quiet || {
+            git commit -m "🔁 به‌روزرسانی خودکار فایل‌ها"
+            git push
+          }
