--- a/.github/workflows/update-sublist.yml
+++ b/.github/workflows/update-sublist.yml
@@ -1,6 +1,10 @@
 name: 🔄 به‌روزرسانی خودکار
-
 on:
+  push:
+    paths:
+      - 'Complex_URL_list.txt'
+      - 'Simple_URL_List.txt'
+      - 'mihomo_template.txt'
   workflow_dispatch:
 
 jobs:
